# actioneer

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  Justfile  README.md  SPEC.md  build.zig  build.zig.zon  install.sh  justfile  release-plz.toml
.github/workflows/: ci.yaml  homebrew-tap.yaml  release-plz.yaml  release.yaml  zizmor.yaml
.pi/todos/: 01b60f53.md  03a0eca6.md  0b310b38.md  15918546.md  1a00dc1a.md  20f2307d.md  31b7e50f.md  3ac04483.md  4734d0ab.md  4aabfc56.md  7fa55372.md  84a95896.md  91e8356e.md  b3303106.md  b374cee4.md  b7773f8b.md  b912196d.md  c63eb900.md  dd67a60f.md
docs/: engine.md  github.md  scan.md  tui.md
src/: ansi.rs  audit.rs  audit_output.rs  cache.rs  cli.rs  cli.zig  config.rs  discovery.rs  display.rs  errors.rs  github.rs  lib.rs  logger.rs  main.rs  main.zig  model.rs  patch.rs  prompt.rs  resolve.rs  rewrite.rs  scan.rs  tests.zig  tui.rs
src/actions/: fixtures.rs  mod.rs  reference.rs  resolution.rs  version.rs
src/app/: apply_updates.zig  check_service.zig  check_workflows.zig  config.zig  update_service.zig
src/app/ui/: output.zig  prompt.zig  styles.zig
src/audit/: fix.rs  mod.rs  output.rs
src/cli/: check.zig  options.zig  prompt.zig  root.zig  ui.zig  validate.zig
src/cli/cmd/: update.zig  validate.zig  version.zig
src/cmd/: audit.rs  mod.rs  prompt.rs  update.rs  update.zig  validate.rs  validate.zig  version.rs
src/config/: mod.rs
src/core/: apply.zig  config.zig  file_rewriter.zig  git.zig  github.zig  log.zig  parse-yaml.zig  parse.zig  rewrite.zig  runtime.zig  scanner.zig  text_edit.zig  types.zig  updates.zig  yaml.zig
src/engine/: git.rs  mod.rs  parse.rs  reference.rs  resolver.rs  rewrite.rs  scanner.rs  uses_line.rs
src/github/: cache.rs  client.rs  mod.rs
src/model/: mod.rs  reference.rs  resolve.rs  resolved_update.rs
src/patch/: mod.rs
src/scan/: apply.rs  audit.rs  display.rs  mod.rs  pin.rs  plan.rs  types.rs
src/syntax/: github_actions.rs  github_actions.zig  mod.rs  yaml_tree.rs  yaml_tree.zig
src/terminal/: display.rs  mod.rs  prompt.rs
src/tui/: app.rs  event.rs  mod.rs  selection.rs  theme.rs  ui.rs  view.rs
src/ui/: mod.rs  prompt.rs  prompt_input.rs  prompt_render.rs  prompt_ui_state.rs
src/update/: mod.rs  output.rs
src/workflows/: discover.rs  mod.rs  patch.rs
testdata/github/: git_ref_branch_main.json  git_ref_tag_annotated.json  git_ref_tag_lightweight.json  git_tag_annotated_deref.json  release_v4.json  releases_checkout.json
testdata/workflows/: advanced.yml  basic.yml  comments.yml  no_name.yml  pinned.yml
tests/: actions.rs  apply.rs  audit_e2e.rs  audit_json.rs  cache.rs  cli.rs  cli_parsing.rs  cli_paths.rs  cli_process.rs  cli_version.rs  config.rs  config_loading.rs  discovery.rs  e2e.rs  engine.rs  github.rs  github_api.rs  github_tags.rs  resolve_e2e.rs  rewrite_e2e.rs  scan.rs  terminal.rs  update_json.rs  workflows.rs
tests/e2e/: audit_e2e.rs  resolve_e2e.rs
tests/github/: client.rs
tests/support/: fixtures.rs  mod.rs
tests/workflows/: discover.rs  patch.rs
(+13 files in other folders)
