[package]
name = "actioneer"
version = "0.2.0"
edition = "2024"
rust-version = "1.95"
license = "MIT"
description = "CLI that detects outdated GitHub Actions and updates them to the latest versions or pinned SHAs"
repository = "https://github.com/luxass/actioneer"
readme = "README.md"
keywords = ["github-actions", "cli", "security", "dependencies", "workflow"]
categories = ["command-line-utilities", "development-tools"]

[lib]
name = "actioneer"
path = "src/lib.rs"

[[bin]]
name = "actioneer"
path = "src/main.rs"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
indexmap = { version = "2.14.0", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
toml = { version = "0.8", default-features = false, features = ["parse"] }

[dev-dependencies]
tempfile = "3"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
dbg_macro = "warn"
todo = "warn"

[profile.release]
lto = true
strip = "symbols"
