[package]
name = "actioneer"
version = "0.3.0"
edition = "2024"
rust-version = "1.95"
license = "MIT"
description = "CLI that detects outdated GitHub Actions and updates them to the latest versions or pinned SHAs"
repository = "https://github.com/luxass/actioneer"
readme = "README.md"
keywords = ["github-actions", "cli", "security", "dependencies", "workflow"]
categories = ["command-line-utilities", "development-tools"]

[lib]
name = "actioneer"
path = "src/lib.rs"

[[bin]]
name = "actioneer"
path = "src/main.rs"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
crossterm = "0.29.0"
indexmap = { version = "2.14.0", features = ["serde"] }
ratatui = "0.30.2"
semver = "1.0.27"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.150"
serde_yaml = "0.9"
time = { version = "0.3.47", features = ["parsing", "formatting"] }
toml = { version = "0.8", default-features = false, features = ["parse"] }
ureq = { version = "3.3.0", features = ["json"] }

[dev-dependencies]
tempfile = "3"

[lints.rust]
missing_docs = "deny"
unsafe_code = "forbid"

[lints.clippy]
dbg_macro = "warn"
todo = "warn"

[lints.rustdoc]
broken_intra_doc_links = "deny"

[profile.release]
lto = true
strip = "symbols"
